[package]
name = "rusty_webex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
chrono = "0.4.26"
http = "0.2.9"
log = "0.4.18"
url = "2.4.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
futures = { version = "0.3.28", default-features = false }
futures-util = "0.3.28"
tokio-tungstenite = "0.20.1"
