[package]
name = "rusty_webex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.20.1", features = [
    "rustls-tls-native-roots",
] }
env_logger = "0.10.0"
chrono = "0.4.26"
http = "0.2.9"
log = "0.4.18"
url = "2.4.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
futures = { version = "0.3.28", default-features = false }
futures-util = "0.3.28"
rustls = "0.21.9"
tokio-rustls = "0.24.1"
rustls-connector = "0.18.5"
rustls-native-certs = "0.6.3"
uuid = { version = "1.6.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
